Created Log4Net appender: SignalAppender and a sample app Created NLog target: SignalTarget and a sample app

--- a/Cloudish.LoggingExtensions/Cloudish.Log4Net.SignalAppender.SampleApp/App.config
+++ b/Cloudish.LoggingExtensions/Cloudish.Log4Net.SignalAppender.SampleApp/App.config
@@ -6,12 +6,11 @@
 
   <!-- Log4net Logging Setup -->
   <log4net>
-    <appender name="SignalAppender" type="Cloudish.Log4Net.SignalAppender">
+    <appender name="SignalAppender" type="Cloudish.Log4Net.SignalAppender.SignalAppender, Cloudish.Log4Net.SignalAppender">
       <ServiceUrl value="https://api.cloudish.net/signal/logs/" />
       <APIKey value="6472587c1ab596af035f928d594942d5" />
       <layout type="log4net.Layout.PatternLayout">
-        <!-- Pattern to output the caller's file name and line number -->
-        <conversionPattern value="%5level - %message%newline" />
+        <conversionPattern value="%timestamp [%thread] %level %logger %ndc - %message%newline" />        
       </layout>
     </appender>
     <root>
