--- a/Cloudish.LoggingExtensions/Cloudish.NLog.SignalTarget.SampleApp/Cloudish.NLog.SignalTarget.SampleApp.csproj
+++ b/Cloudish.LoggingExtensions/Cloudish.NLog.SignalTarget.SampleApp/Cloudish.NLog.SignalTarget.SampleApp.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A582C42D-E909-4621-8849-363612EC619B}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{697C480E-1BE9-4F96-A223-C784A65BF2DB}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cloudish.NLog.SignalTarget</RootNamespace>
-    <AssemblyName>Cloudish.NLog.SignalTarget</AssemblyName>
+    <RootNamespace>Cloudish.NLog.SignalTarget.SampleApp</RootNamespace>
+    <AssemblyName>Cloudish.NLog.SignalTarget.SampleApp</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,10 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SignalTarget.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Cloudish.NLog.SignalTarget\Cloudish.NLog.SignalTarget.csproj">
+      <Project>{a582c42d-e909-4621-8849-363612ec619b}</Project>
+      <Name>Cloudish.NLog.SignalTarget</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
