Added more config info

--- a/Cloudish.LoggingExtensions/Cloudish.NLog.SignalTarget.SampleApp/App.config
+++ b/Cloudish.LoggingExtensions/Cloudish.NLog.SignalTarget.SampleApp/App.config
@@ -11,7 +11,7 @@
       <target name="params" type="SignalTarget" ServiceURL="https://api.cloudish.net/signal/logs/" APIKey="6472587c1ab596af035f928d594942d5"/>
     </targets>
     <rules>
-      <logger name="*" minLevel="Info" appendTo="params" />
+      <logger name="*" minLevel="Trace" appendTo="params" />
     </rules>
   </nlog>
 </configuration>
