--- a/Cloudish.LoggingExtensions/Cloudish.NLog.SignalTarget.SampleApp/App.config
+++ b/Cloudish.LoggingExtensions/Cloudish.NLog.SignalTarget.SampleApp/App.config
@@ -8,7 +8,7 @@
       <add assembly="Cloudish.NLog.SignalTarget"/>
     </extensions>
     <targets>
-      <target name="params" type="SignalTarget" ServiceURL="https://api.cloudish.net/signal/logs/" APIKey="6472587c1ab596af035f928d594942d5"/>
+      <target name="params" type="SignalTarget" ServiceURL="https://api.cloudish.net/signal/logs/" ApiKey="6472587c1ab596af035f928d594942d5"/>
     </targets>
     <rules>
       <logger name="*" minLevel="Trace" appendTo="params" />
