--- a/Cloudish.LoggingExtensions/Cloudish.Log4Net.SignalAppender.SampleApp/App.config
+++ b/Cloudish.LoggingExtensions/Cloudish.Log4Net.SignalAppender.SampleApp/App.config
@@ -8,7 +8,7 @@
   <log4net>
     <appender name="SignalAppender" type="Cloudish.Log4Net.SignalAppender.SignalAppender, Cloudish.Log4Net.SignalAppender">
       <ServiceUrl value="https://api.cloudish.net/signal/logs/" />
-      <ApiKey value="6472587c1ab596af035f928d594942d5" />
+      <ApiKey value="[enter your api key here]" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%timestamp [%thread] %level %logger %ndc - %message%newline" />        
       </layout>
