Updated the NLog target to an AsyncTarget. We can now bulk send the data.

--- a/Cloudish.LoggingExtensions/Cloudish.NLog.SignalTarget.SampleApp/App.config
+++ b/Cloudish.LoggingExtensions/Cloudish.NLog.SignalTarget.SampleApp/App.config
@@ -7,11 +7,15 @@
     <extensions>
       <add assembly="Cloudish.NLog.SignalTarget"/>
     </extensions>
-    <targets>
-      <target name="params" type="SignalTarget" ServiceURL="https://api.cloudish.net/signal/logs/" ApiKey="[enter your api key here]"/>
+    <targets async="true">
+      <target name="CloudishSignalTarget" type="SignalTarget" 
+              ServiceURL="https://localhost:44302/signal" 
+              ApiKey="943085f4110ecc911befb8bc829ad1e1" 
+              SignalType="MyApp" 
+              Tags="tag1,tag2,etc"/>
     </targets>
     <rules>
-      <logger name="*" minLevel="Trace" appendTo="params" />
+      <logger name="*" minLevel="Trace" appendTo="CloudishSignalTarget" />
     </rules>
   </nlog>
 </configuration>
