Json.Net is now a required dependency. Both logging extensions now log json to Cloudish. Added configuration changes. Added a signal model to each logging extension. Updated each sample app to both reflect the new config changes as well as how it generates log events.

--- a/Cloudish.LoggingExtensions/Cloudish.NLog.SignalTarget.SampleApp/App.config
+++ b/Cloudish.LoggingExtensions/Cloudish.NLog.SignalTarget.SampleApp/App.config
@@ -7,12 +7,13 @@
     <extensions>
       <add assembly="Cloudish.NLog.SignalTarget"/>
     </extensions>
+    <!-- You must set async to True. This is a required setting. -->
     <targets async="true">
       <target name="CloudishSignalTarget" type="SignalTarget" 
-              ServiceURL="https://localhost:44302/signal" 
-              ApiKey="943085f4110ecc911befb8bc829ad1e1" 
-              SignalType="MyApp" 
-              Tags="tag1,tag2,etc"/>
+              ServiceURL="https://api.cloudish.net/signal" 
+              ApiKey="[REQUIRED: api key]" 
+              SignalType="[REQUIRED: signal type]" 
+              Tags="[OPTIONAL: comma separated tags]" />
     </targets>
     <rules>
       <logger name="*" minLevel="Trace" appendTo="CloudishSignalTarget" />
