--- a/Cloudish.LoggingExtensions/Cloudish.Log4Net.SignalAppender.SampleApp/App.config
+++ b/Cloudish.LoggingExtensions/Cloudish.Log4Net.SignalAppender.SampleApp/App.config
@@ -7,8 +7,10 @@
   <!-- Log4net Logging Setup -->
   <log4net>
     <appender name="SignalAppender" type="Cloudish.Log4Net.SignalAppender.SignalAppender, Cloudish.Log4Net.SignalAppender">
-      <ServiceUrl value="https://api.cloudish.net/signal/logs/" />
-      <ApiKey value="[enter your api key here]" />
+      <ServiceUrl value="https://api.cloudish.net/signal" />
+      <ApiKey value="[REQUIRED: api key]" />
+      <SignalType value="[REQUIRED: signal type]" />
+      <Tags value="[OPTIONAL: comma separated tags]" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%timestamp [%thread] %level %logger %ndc - %message%newline" />        
       </layout>
