--- a/Cloudish.LoggingExtensions/Cloudish.Log4Net.SignalAppender/Cloudish.Log4Net.SignalAppender.csproj
+++ b/Cloudish.LoggingExtensions/Cloudish.Log4Net.SignalAppender/Cloudish.Log4Net.SignalAppender.csproj
@@ -33,6 +33,10 @@
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net35-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\net35\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Signal.cs" />
     <Compile Include="SignalAppender.cs" />
   </ItemGroup>
   <ItemGroup>
